syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import  "rpc_create_user.proto";
import  "rpc_login_user.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/dbracic21-foi/simplebank/pb";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple Bank API";
    version: "1.1";
    contact: {
      name: "Simple Bank";
      url: "https://github.com/dbracic21-foi/simplebank";
      email: "dariobracic5@gmail.com";
    };
  };
};
service SimpleBank{
    rpc CreateUser (CreatUserRequest) returns (CreatUserResponse){
        option (google.api.http) = {
            post: "/v1.1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to create a new user";
          summary: "Create new user";
        };
      }

    rpc LoginUser(LoginRequest) returns(LoginResponse){
        option (google.api.http) = {
            post: "/v1.1/login_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API tto login user and get access token & refresh token";
          summary: "Login user";
        };
    }
}